[gd_scene load_steps=9 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://analog/analog.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Open 24 Display St.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://player_GD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Button.gd" type="Script" id=5]
[ext_resource path="res://gfx/red_button.png" type="Texture" id=6]
[ext_resource path="res://gfx/green_button.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 85
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Level" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VSlider" type="VSlider" parent="CanvasLayer"]
margin_left = 48.0
margin_top = 146.0
margin_right = 76.0
margin_bottom = 433.0
min_value = 10.0
step = 5.0
value = 100.0
tick_count = 4
ticks_on_borders = true

[node name="Control2" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -301.156
margin_top = 0.210297
margin_right = -1.15601
margin_bottom = 0.210297

[node name="Analog" parent="CanvasLayer/Control2" instance=ExtResource( 2 )]
position = Vector2( 144.765, 240.312 )
_listenerNodePath = "/root/Level"
_name = "Right_Analog"

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 87.15
margin_top = 148.0
margin_right = 127.15
margin_bottom = 162.0
text = "100"

[node name="Label5" type="Label" parent="CanvasLayer"]
margin_left = 174.4
margin_top = 227.8
margin_right = 214.4
margin_bottom = 241.8
text = "Power Level"

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 86.0
margin_top = 238.0
margin_right = 126.0
margin_bottom = 252.0
text = "70"

[node name="Label3" type="Label" parent="CanvasLayer"]
margin_left = 85.0
margin_top = 329.0
margin_right = 125.0
margin_bottom = 343.0
text = "40
"

[node name="Label4" type="Label" parent="CanvasLayer"]
margin_left = 84.0
margin_top = 420.0
margin_right = 101.0
margin_bottom = 434.0
text = "10"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 156.0
margin_top = 234.0
margin_right = 287.0
margin_bottom = 341.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.00784314, 0.772549, 0, 1 )
text = "100"

[node name="player_GDscript" parent="." instance=ExtResource( 4 )]
position = Vector2( 446.263, 166.168 )

[node name="Button" type="Button" parent="."]
margin_left = 450.776
margin_top = 15.4608
margin_right = 528.776
margin_bottom = 54.4608
rect_scale = Vector2( 1.5, 1.5 )
toggle_mode = true
text = "Connect"
script = ExtResource( 5 )

[node name="TextEdit" type="TextEdit" parent="Button"]
margin_left = -165.42
margin_top = 7.85683
margin_right = -9.41971
margin_bottom = 30.8568
text = "192.168.1.205:10000"

[node name="red_button" type="Sprite" parent="."]
position = Vector2( 804.706, 50.8836 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="green_button" type="Sprite" parent="."]
visible = false
position = Vector2( 804.706, 50.8836 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="."]
margin_left = 334.956
margin_top = 446.636
margin_right = 361.956
margin_bottom = 460.636
text = "Force"

[node name="Button2" type="Button" parent="Label"]
margin_left = 45.4952
margin_top = -9.54031
margin_right = 93.4952
margin_bottom = 20.4597
text = "Send 0"

[node name="Button3" type="Button" parent="Label"]
visible = false
margin_left = 96.6118
margin_top = -9.54031
margin_right = 144.612
margin_bottom = 20.4597
text = "2"

[node name="Button4" type="Button" parent="Label"]
visible = false
margin_left = 158.547
margin_top = -10.0279
margin_right = 206.547
margin_bottom = 19.9721
text = "3"

[node name="StatusLabel" type="Label" parent="."]
margin_left = 528.462
margin_top = 274.258
margin_right = 568.462
margin_bottom = 288.258
text = "Status	"

[node name="TextEdit" type="TextEdit" parent="StatusLabel"]
margin_left = -187.965
margin_top = 19.7417
margin_right = 41.0346
margin_bottom = 146.742
readonly = true
v_scroll_speed = 100.0

[node name="DebugButton" type="Button" parent="."]
margin_left = 341.345
margin_top = 264.1
margin_right = 411.345
margin_bottom = 289.1
text = "Debug"

[node name="DebugButton2" type="Button" parent="."]
margin_left = 430.812
margin_top = 263.823
margin_right = 515.812
margin_bottom = 288.823
text = "Debug UDP"

[node name="ClearButton" type="Button" parent="."]
margin_left = 486.024
margin_top = 441.667
margin_right = 556.024
margin_bottom = 466.667
text = "Clear"

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Label2" type="Label" parent="."]
margin_left = 772.351
margin_top = 453.151
margin_right = 812.351
margin_bottom = 467.151
text = "v2.1 - GR"

[connection signal="value_changed" from="CanvasLayer/VSlider" to="." method="_on_VSlider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Label/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Label/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Label/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="DebugButton" to="." method="_on_DebugButton_pressed"]
[connection signal="pressed" from="DebugButton2" to="." method="_on_DebugButton2_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
